--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,8 @@
     <div class="section white">
         <div class="row container center">
             <h3 class="header">SwoopIt</h3>
-            <p class="grey-text text-darken-3 lighten-3">SwoopIt is a revolutionary app that allows you to purchase and order food from your local restaurants and grocery stores from your school.</p>
+            <p class="grey-text text-darken-3 lighten-3">Designed for hungry students stuck on campus, SwoopIt is a tailor-made app that allows you to order food from your local restaurants and grocery stores and have it delivered by a peer.</p>
+            <p class="grey-text text-darken-3 lighten-3">Made for students by students.</p>
         </div>
         <div class="row container center">
             <img src="img/google-play-badge.svg" alt="Google Play" onclick="window.location.href = 'https://play.google.com/store/apps/details?id=com.swoopit.android'" style="width: 179.535px; height: 60px; cursor: pointer">
