--- a/views/items.hbs
+++ b/views/items.hbs
@@ -17,6 +17,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Store</th>
+                    <th>Price</th>
                     <th>ID</th>
                     <th>Action</th>
                 </tr>
@@ -56,8 +57,9 @@
                 var toAppend = '<tr>' +
                         '<td>' + items[i].name + '</td>' +
                         '<td>' + storeNames[getCategory(items[i].category).store] + '</td>' +
+                        '<td>' + items[i].price + '</td>' +
                         '<td>' +  items[i].id + '</td>' +
-                        '<td><a class=\'dropdown-trigger btn blue\' onclick="history.pushState(null, null, updateQueryStringParameter(window.location.pathname, \'item-id\', \'' + items[i].id + '\'));" data-target=\'item-dropdown\'>Item Information</a></td>' +
+                        '<td><a class=\'dropdown-trigger btn blue\' id="' + items[i].id + '" onclick="history.pushState(null, null, updateQueryStringParameter(window.location.pathname, \'item-id\', \'' + items[i].id + '\'));" data-target=\'item-dropdown\'>Item Information</a></td>' +
                         '</tr>';
 
                 $('#table-body').append(toAppend);
@@ -72,7 +74,7 @@
 </script>
 
 <ul id='item-dropdown' class='dropdown-content'>
-    <li><a class="blue-text" onclick="alert('this will open a modal to edit the item')"><i class="material-icons">edit</i>Edit</a></li>
-    <li><a class="red-text" onclick="alert('This will open a modal and super-confirm with you')"><i class="material-icons">delete_forever</i>Delete</a></li>
+    <li><a class="blue-text" onclick="editItem(getParameterByName('item-id'))"><i class="material-icons">edit</i>Edit</a></li>
+    <li><a class="red-text" onclick="deleteItem(getParameterByName('item-id'))"><i class="material-icons">delete_forever</i>Delete</a></li>
 
 </ul>
