--- a/views/items.hbs
+++ b/views/items.hbs
@@ -105,6 +105,6 @@
     </div>
     <div class="modal-footer">
         <a href="#!" class="modal-close waves-effect waves-red btn-flat" style="    border: #868686 1px solid;">Cancel</a>
-        <a id="edit-modal-submit" class="waves-effect waves-green btn-flat">Submit</a>
+        <a id="edit-modal-submit" class="waves-effect waves-green btn-flat modal-close">Submit</a>
     </div>
   </div>
